Fix qrCode position, may not be visible

--- a/src/main/resources/META-INF/resources/webjars/home/project/project.css
+++ b/src/main/resources/META-INF/resources/webjars/home/project/project.css
@@ -30,8 +30,8 @@
 }
 .qrcode-toggle .qrcode {
 	position: absolute;
-	right: 0;
-	top: -5px;
+	right: 3px;
+	top: 3px;
 }
 div.dt-button-background {
 	opacity: 0
